--- a/src/Loading/Loading.css
+++ b/src/Loading/Loading.css
@@ -7,12 +7,10 @@
 }
 
 .loading-spinner {
-  border: 4px solid rgba(255, 255, 255, 0.3);
-  border-top: 4px solid #3498db;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 1s linear infinite;
+
+  width: 200px;
+  height: 200px;
+  animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
@@ -30,9 +28,9 @@
   z-index: 1000;
   height: 70%;
   overflow: auto;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0,1);
   backdrop-filter: blur(10px); /* Add the blur effect */
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(109, 105, 105, 0.5);
 }
 
 /* Add padding or margin to center the content within the modal */
@@ -52,6 +50,11 @@
   filter: blur(10px); /* Add the same blur effect */
   opacity: 0.5; /* Adjust the opacity for frost effect */
   z-index: -1; /* Place it behind the modal content */
+}
+
+
+.modal-for-genre::-webkit-scrollbar {
+  display: none;
 }
 
 
@@ -89,3 +92,5 @@
 .options-list::-webkit-scrollbar-thumb:hover {
   background-color: #555;
 }
+
+
